# mood

./: .env.template  .gitignore  Cargo.toml  README.md
backend/: Cargo.toml
backend/src/db/: mod.rs
frontend/: Cargo.toml  index.html
frontend/src/: lib.rs
migrations/2019-09-12-114258_mood/: down.sql  up.sql
src/: lib.rs
src/db/: mod.rs  models.rs  schema.rs
