[package]
name = "backend"
version = "0.1.0"
authors = ["Mariot Tsitoara <mariot.tsitoara@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
mood = { path = ".." }
diesel = { version = "1.0.0", features = ["sqlite"] }
dotenv = "0.14.1"
rocket = "0.4.2"
rocket_cors = { version = "0.5.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json"]
