[package]
name = "frontend"
version = "0.1.0"
authors = ["Mariot Tsitoara <mariot.tsitoara@gmail.com>"]
edition = "2018"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
mood = { path = ".." }
dotenv = "0.14.1"
futures = "^0.1.28"
seed = "^0.4.0"
wasm-bindgen = "^0.2.50"
web-sys = "^0.3.27"
